<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  >
    
    <TextView
        android:id="@+id/tv_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What\&apos;s your plan?"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_driver_time_ride_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/title_fragment_driver_ride_details_time" />

        <EditText
            android:id="@+id/et_driver_time_ride_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_alignTop="@id/tv_driver_time_ride_start"
            android:layout_toRightOf="@id/tv_driver_time_ride_start"
            android:editable="false"
            android:gravity="right"
            android:ems="10" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_driver_desitnation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/title_fragment_driver_ride_details_destination" />

        <Spinner
            android:id="@+id/sp_driver_destination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_driver_desitnation"
            android:layout_toEndOf="@+id/tv_driver_desitnation" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_drivers_nb_passengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/title_fragment_driver_ride_details_vehicule_capacity" />

        <Spinner
            android:id="@+id/sp_drivers_nb_passengers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_drivers_nb_passengers"
            android:layout_toEndOf="@+id/tv_drivers_nb_passengers" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="onSaveRideAction"
            android:text="@string/btnLockRide" />
        
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnSave"
            android:layout_alignTop="@+id/btnSave"
            android:layout_toRightOf="@id/btnSave"
            android:enabled="false"
            android:onClick="onDeleteRideAction"
            android:text="@string/btnDelete" />

    </RelativeLayout>

</LinearLayout>