<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I want to..."
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_time_ride_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/title_fragment_passenger_ride_start_time" />

        <EditText
            android:id="@+id/et_time_ride_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_alignTop="@id/tv_time_ride_start"
            android:layout_toRightOf="@id/tv_time_ride_start"
            android:editable="false"
            android:gravity="right"
            android:ems="10" >
        </EditText>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_passenger_search_ride_offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/title_fragment_passenger_search_ride_offset" />

        <Spinner
            android:id="@+id/sp_passenger_search_ride_offset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_passenger_search_ride_offset"
            android:layout_toEndOf="@+id/tv_passenger_search_ride_offset" />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_passenger_search_ride_desitnation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/title_fragment_driver_ride_details_destination" />

        <Spinner
            android:id="@+id/sp_passenger_search_ride_destination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_passenger_search_ride_desitnation"
            android:layout_toEndOf="@+id/tv_passenger_search_ride_desitnation" />
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="onSearchRideAction"
            android:text="@string/btnSearchRide" />
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
	        android:id="@+id/lvSearchResults"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true" >
	    </ListView>
    </RelativeLayout>

</LinearLayout>